# ComfyUI-VibeVoice-exl3

./: README.md  __init__.py  pyproject.toml  requirements.txt
examples/: vibevoice_exl3_with_wav2lip.json  vibevoice_single_speaker_exl3.json
nodes/: __init__.py  base_vibevoice.py  multi_speaker_node.py  replace_multiple_node.py  single_speaker_node.py  test.py
vvembed/modular/: configuration_vibevoice.py  detectors.py  modeling_vibevoice.py  modeling_vibevoice_inference.py  modular_vibevoice_diffusion_head.py  wav2lip_streamer.py
vvembed/processor/: vibevoice_processor.py
